--- a/src/pages/mainHeader/mainHeader.scss
+++ b/src/pages/mainHeader/mainHeader.scss
@@ -149,4 +149,10 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin-bottom: 15px;
   }
- 
+  #chatBot {
+      z-index: 11;
+      top: 86%;
+      right: 25px;
+
+    
+  }
