--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -46,75 +46,191 @@ app-component{
     {
         display: inline-block;
     }
-    .chat-header {
-        position: fixed;
-        top: 60px;
-        width: 80%;
-        background: #fff;
-        z-index: 101;
-        left: 10%;
-        height: 60px;
-        border-radius: 10px 10px 0px 0px;
-        border-bottom: 1px solid #bbb;
-    }
-    ng-chat {
-        background: rgba(0, 0, 0,0.8);
-        width: 100%;
-        height: 100%;
-        position: fixed;
-        top: 0;
-        z-index: 1;
-    }
-    ng-chat /deep/ #ng-chat {
-        width: 80%;
-        height: 500px;
-        left: 10%;
-        background: #fff;
-        top: 120px;
-        border-radius: 0 0 10px 10px;
-    }
-    ng-chat /deep/ #ng-chat-people {
-        height: 500px;
-        border: none;
-        border-right: 1px solid #bbb;
-        padding-top: 10px;
-        border-radius: 0 0 0px 10px;
-        box-shadow: none;
-    }
-    ng-chat /deep/ .ng-chat-window {
-        right: auto !important;
-        left: 10% !important;
-        margin-left: 240px;
-        top: 120px;
-        height: 500px;
-        width: calc(80% - 240px) !important;
-        border-radius: 0 0 10px 0px;
-        border: none;
-        box-shadow: none;
-        display: block !important;
-    }
-    ng-chat /deep/ .ng-chat-window .ng-chat-close {
-        display: none;
-    }
-    ng-chat /deep/ #ng-chat-people .ng-chat-title {
-        display : none;
-        height : 45px !important;
-    }
-    ng-chat /deep/ #ng-chat-search_friend {
-        margin-top: 0px;
-    }
-    ng-chat /deep/ #ng-chat-users {
-        top: 60px;
-    }
-    .chat-header h4 {
-        font-size: 1.25em;
-        padding: 17px 20px;
-    }
-    .chat-header .close {
-        color: #00677f;
-        margin: 14px 20px;
-        font-size: 30px;
-        opacity: 1;
-    }
-   
+    
+}
+
+.chat-header {
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    background: #fff;
+    z-index: 101;
+    left: 0;
+    height: 60px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    border-radius: 0;
+    border-bottom: 1px solid #e8e8e8;
+}
+ng-chat#ngChatContainer{
+    background: rgba(0, 0, 0,0.8);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+}
+ng-chat#ngChatContainer /deep/ #ng-chat{
+    width: 100%;
+    height: 100%;
+    left: 0;
+    background: #fff;
+    top: 60px;
+    border-radius: 0;
+}
+ng-chat#ngChatContainer /deep/ #ng-chat-people {
+    height: calc(100% - 60px);
+    width: 100%;
+    border: none;
+    border-right: 1px solid #e8e8e8;
+    padding-top: 10px;
+    border-radius: 0;
+    box-shadow: none !important;
+}
+ng-chat#ngChatContainer /deep/ .ng-chat-window {
+    right: auto !important;
+    left: 0% !important;
+    margin-left: 0px;
+    top: 60px;
+    height: calc(100% - 60px);
+    width: 100% !important;
+    border-radius: 0;
+    border: none;
+    box-shadow: none !important;
+    display: block !important;
+}
+ng-chat#ngChatContainer /deep/ .ng-chat-window .ng-chat-close {
+    display: none;
+}
+ng-chat#ngChatContainer /deep/ #ng-chat-people .ng-chat-title {
+    display : none;
+    height : 45px !important;
+}
+ng-chat#ngChatContainer /deep/ #ng-chat-search_friend {
+    display: none;
+}
+ng-chat#ngChatContainer /deep/ #ng-chat-users {
+    top: 10px;
+}
+.chat-header h4 {
+    font-size: 20px;
+    padding: 17px 20px;
+    margin: 0px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.chat-header .close {
+    color: #00677f;
+    margin: 14px 20px;
+    font-size: 25px;
+    opacity: 1;
+
+}
+.chat-header  .closeImg{
+    margin: 0;
+    padding:0; 
+    width: 25px;
+    height: 25px;
+}
+ng-chat#ngChatContainer /deep/ .ng-chat-window.ng-chat-window-collapsed {
+    display: none !important;
+}
+ng-chat#ngChatContainer /deep/ .ng-chat-title{
+    padding: 10px;
+    font-size: 20px;
+    height: 50px;
+}
+ng-chat#ngChatContainer /deep/ .ng-chat-window .ng-chat-messages .ng-chat-message > span {
+    background-color: #c0dd9a;
+    border: 0px;
+    color: #000;
+    font-size: 1em;
+    padding: 10px 16px;
+    margin: 0 10px 10px;
+    position: relative;
+    width: auto;
+    max-width: 85%;
+}
+ng-chat#ngChatContainer /deep/ .ng-chat-window .ng-chat-messages .ng-chat-message > span:after,
+ng-chat#ngChatContainer /deep/ .ng-chat-window .ng-chat-messages .ng-chat-message > span:before {
+    content: "\f0da";
+    display: inline-block;
+    font: normal normal normal 20px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-size: 24px;
+    font-weight: bold;
+    color: #c0dd9a;
+    margin-right: 4px;
+    position: absolute;
+    right: -16px;
+    bottom: 0px;
+    font-size: 40px;
+
+}
+ng-chat#ngChatContainer /deep/ .ng-chat-window .ng-chat-messages .ng-chat-message > span:before {
+    content: "";
+}
+ng-chat#ngChatContainer /deep/ .ng-chat-window .ng-chat-messages .ng-chat-message.ng-chat-message-received > span {
+    background-color: #f2f2f4;
+}
+ng-chat#ngChatContainer /deep/ .ng-chat-window .ng-chat-messages .ng-chat-message.ng-chat-message-received > span:after {
+    content: "";
+}
+ng-chat#ngChatContainer /deep/ .ng-chat-window .ng-chat-messages .ng-chat-message.ng-chat-message-received > span:before {
+    content: "\f0d9";
+    left: -12px;
+    right: auto;
+    color: #f2f2f4;
+}
+ng-chat#ngChatContainer /deep/ .ng-chat-window .ng-chat-messages .ng-chat-message.ng-chat-message-received > .icon-wrapper {
+    display: none;
+}
+ng-chat#ngChatContainer /deep/ #ng-chat-users li {
+    padding: 7px 10px;
+    border-bottom: 1px solid #e8e8e8;
+    max-height: 80px;
+}
+ng-chat#ngChatContainer /deep/ .ng-chat-title {
+    background-color: #fff;
+    padding: 10px;
+    border-bottom: 1px solid #e8e8e8;
+    height: 46px;
+    cursor: text;
+}
+ng-chat#ngChatContainer /deep/ #ng-chat-users li > strong {
+    color: #00677f;
+    font-size: 1em;
+    max-width: 75%;
+}
+ng-chat#ngChatContainer /deep/ .ng-chat-window > input {
+    border-radius: 0 0 10px 0px;
+    height: 50px;
+}
+ng-chat#ngChatContainer /deep/ #ng-chat-users li > .icon-wrapper {
+    margin-right: 10px;
+}
+ng-chat#ngChatContainer /deep/ .ng-chat-title > .ng-chat-user-status,
+ng-chat#ngChatContainer /deep/ .ng-chat-window .ng-chat-messages .ng-chat-message.ng-chat-message-received img {
+    display: none;
+}
+ng-chat#ngChatContainer /deep/ #ng-chat-users li > img, 
+ng-chat#ngChatContainer /deep/ #ng-chat-users li > .icon-wrapper {
+    border: 1px solid #e8e8e8;
+}
+ng-chat#ngChatContainer /deep/ .ng-chat-title strong:before {
+    content: "";
+    display: inline-block;
+    font: normal normal normal 20px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-size: 24px;
+    font-weight: bold;
+    color: #00677f;
+    margin-right: 4px;
+}
+ng-chat#ngChatContainer /deep/ .ng-chat-title strong {
+    width: 100%;
 }
