--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -63,8 +63,10 @@ page-home {
     .noUpcomingVisits{
         margin-top: 5px;
         padding: 15px;
-        font-weight: bold;
+        font-size: 1.5em;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        text-align: center;
+        padding-top: 27%;
    }
     .clearLeft{
         clear: both;
@@ -150,6 +152,7 @@ page-home {
     .visitsPast{
         box-shadow: 0px 0 10px 1px gainsboro;
         width: calc(100% - 20px);
+        height: calc(100% - 396px);
         margin: 0px 10px 10px 10px;
         float: left;
         border-radius: .25em;
@@ -373,6 +376,7 @@ page-home {
         white-space: nowrap;
         text-overflow: ellipsis;
         overflow: hidden;
+        color: #ccc !important;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
    .fab-ios{
@@ -380,7 +384,7 @@ page-home {
       font-weight: bold; 
       border: 1px solid black;
    }
-.fixed-content, .scroll-content{
-top: 35px;
-}
+// .fixed-content, .scroll-content{
+// top: 35px;
+// }
 }
