--- a/src/pages/my-visit/my-visit.scss
+++ b/src/pages/my-visit/my-visit.scss
@@ -19,6 +19,8 @@ page-my-visit {
         border-radius: 2px;
         margin: 10px auto;
         border-radius: 7px;
+        height: calc(100% - 140px);
+        background: #fff;
    }
    .connectoresFlight{
        text-align: center;
@@ -55,21 +57,16 @@ page-my-visit {
         color:#fff;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
-   .companyConatiner{
-       padding-top: 10px;
-   }
    .companyConatiner .company{
-       margin: 10px 10px;
-       display: inline;
+       padding: 10px 10px 0;
+       font-weight: bold;
+       display: block;
    
    }
    .visitDetaikls{
-     text-overflow:ellipsis;
-     overflow: hidden; 
-     display: inline;
-     margin: 10px 0 0 0;
-   }
-  
+        display: inline-block;
+        margin: 2px 10px;
+   }  
     .locationDetails p .fa{
         margin-right: 8px;
    }
@@ -192,12 +189,13 @@ page-my-visit {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         padding: 0 !important;
         margin: 0 !important;
+        border-radius: 0.55px solid #333;
    }
     .ionItem{
         padding:0 15px !important;
         margin: 0 !important;
         border-top:none !important;
-        border-bottom:1px solid #c8c7cc;
+        border-bottom:1px solid #c8c7cc !important;
    }
     ion-list.agendaList:last-child .item-block{
         border-bottom: none;
@@ -264,6 +262,9 @@ page-my-visit {
     .scroll-content{
         padding:0px !important;
    }
+   .detailsContiner {
+       height: calc(100% - 40px);
+   }
     .back-button.show-back-button{
         display: none;
    }
@@ -277,10 +278,11 @@ page-my-visit {
         height: 26px;
         background-color: #00667f;
         border-radius: 20px;
-
         color: #fff;
         max-height: 26px;
         transition: none;
+        display: table-cell;
+        vertical-align: middle;
    }
     .label{
         color: #000;
@@ -375,9 +377,9 @@ page-my-visit {
        padding-top: 0;
        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
- .connectors{
-     padding-top:2px; 
- }
+    .connectors{
+        padding-top:2px; 
+    }
    .source{
        color: #fff;
        font-size: 17px;
@@ -593,5 +595,14 @@ page-my-visit {
     .show{
         background-color: #fff;
         padding: 0 15px;
+    }
+    .noServices {
+        display: block;
+        text-align: center;
+        padding-top: 45%;
+        font-size: 1.5em;
+    }
+    .noAgendas{
+        margin: 15px 0px;
     }
 }
