--- a/src/pages/profile/profileDetials.scss
+++ b/src/pages/profile/profileDetials.scss
@@ -21,6 +21,7 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     //line-height: 1;
     color: #00677f;
     float: right;
+    background-color: transparent;
     vertical-align: middle;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 500;
@@ -39,6 +40,10 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     border: none;
   
 }
+.error{
+    color: red;
+
+}
 .profileMenu .label{
     margin: 0;
     padding: 0;
@@ -56,7 +61,9 @@ placeholder{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 15px;
     font-weight: normal;
-    color: #666;
+    color: #999 !important;
+    border: 1px solid #d3d3d3  !important;
+    background-color: #f1f0f0;
 }
 .btn-field-org{
     background-color: #fff;
