--- a/src/pages/sessionDetails/addattendeemodalcontent/prsenterRating.scss
+++ b/src/pages/sessionDetails/addattendeemodalcontent/prsenterRating.scss
@@ -1,6 +1,6 @@
 ngbd-modal-content{
     .popup-container{
-        max-width:100%;
+        width:100%;
         display: block;
         margin: auto auto;
         padding: 0;
