--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -177,6 +177,7 @@ page-login {
     // width: 77.4%;
     text-align: center;
     margin-top: 70px;
+    margin-bottom: 20px;
 }
 .footer p{
     font-size: 10px;
