--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -145,6 +145,18 @@ page-home {
         background: #00667f;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
+   .viewDetailsRead {
+    min-height: 40px;
+    width: 92%;
+    margin: 0 4% 4%;
+    color: #00667f;
+    font-size: 20px;
+    font-weight: initial;
+    border-radius: 20px;
+    border: 1px solid #00667f;
+    background-color: #f5f5f5 !important;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
     .noOfDays {
         font-size: 15px !important;
         color: #fff !important;
