--- a/src/pages/notification/notification.scss
+++ b/src/pages/notification/notification.scss
@@ -37,7 +37,7 @@ page-notificationModule{
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    }
     .notificationContainer ul {
-        margin: 0 10px;
+        margin: 0;
         padding-left: 0;
         box-shadow: 0px 0 10px 1px gainsboro;
         
