--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -140,12 +140,12 @@ $item-border: none;
 }
 
 .count{
-   background: #00667f;
+   background:red;
    padding: 4px;
    border-radius: 50%;
    color: #fff;
    position: absolute;
-   right: -8px;
+   right: 49px;
    top: -2px;
    min-width: 20px;
 }
