--- a/src/pages/comments/comments.scss
+++ b/src/pages/comments/comments.scss
@@ -6,18 +6,33 @@ ion-content{
     min-height: 31px;
     min-width: 100%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+    .locationDetails{
+        background: #2b2825;
+        margin: 0px 10px 10px 10px;
+        border-radius: 7px;
+        font-size: 15px;
+        color:#fff;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   }
    
 }
-.back-arrow{
+.button-clear .back-arrow{
     color: #00677f;
+    font-size: 25px;
 }
+.visitDetaikls{
+    font-size: 15px;
+    display: inline-block;
+    margin: 2px 10px;
+}  
 .button-clear{
     font-size: 20px;
     margin: 20px 0 !important;
     line-height: 1;
     color: #000;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: normal;
+    font-weight: 550;
     padding: 0px 0px 0 0 !important;
 }
 .button-clear i{
@@ -42,27 +57,49 @@ ion-content{
     border-bottom: 1px solid #999;
 }
 
-
+  .companyConatiner .company{
+       padding: 10px 10px 0;
+       font-weight: 550;
+       display: block;
+       font-size: 19px;
+   
+   }
+   .daysCount{
+    padding-bottom: 10px !important;
+    font-size: 15px !important;
+    color: #999;
+    clear: both;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.daysCount span{
+    color: #fff;
+    font-size: 15px !important;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.daysCount i{
+   font-size: 25px;
+   margin: 10px;
+}
 
 .parameter-container{
     width: 95%;
     margin: 0 10px;
     background-color: #fff;
     border-radius: 9px;
+    box-shadow: 1px 0 10px 1px gainsboro;
 }
 .parameters{
-    padding: 20px 10px 20px 20px;
+    padding: 10px 10px 10px 20px;
     list-style-type: none;
     font-weight: 500;
     font-size: 14px;
+    box-shadow: 1px 0 10px 1px gainsboro;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #333;
 }
-.parameters span{
-    margin-right: 20px;
-}
+
 .parameters p{
-    font-size: 15px;
+    font-size: 18px;
     color: #333;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 400;
@@ -70,16 +107,25 @@ ion-content{
 }
 .parameters div{
     float: right;
-    padding: 0px 0px 8px 18px;
+    margin: 10px 0;
+    padding: 3px 0px 0px 10px;
     display: inline-block;
     font-weight: normal;
-    width: 90px;
-    height: 40px;
+    width: 75px;
+    height: 39px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #85ba3f;
     font-size: 14px;
     border-radius: 8px;
     color: #fff;
+}
+.less-than-five{
+    background-color:#ff6000;
+}
+.five-to-seven{
+    background-color:#ffae00;
+}
+.more-than-seven{
+    background-color: #85ba3f;
 }
 .parameters div span{
     font-size: 27px;
@@ -91,4 +137,11 @@ ion-content{
 .fa-star{
 
     margin:0 5px 10px 0 !important;
+}
+.parameters  span img{
+    max-height: 55px;
+    margin-right: 10px;
+}
+.services{
+    background-color: #f5f5f5;
 }
